--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>serdg</h1>
-    <p>Hello</p>
+    <div class="Flogin">
+      <h1>Log in</h1>
+
+      <p>Username</p>
+      <input type="text" />
+
+      <p>Password</p>
+      <input type="password" />
+
+      <button>Log in</button>
+    </div>
   </body>
 </html>
